k8s_userside_log_generator/k8s_http_to_flu_to_server/log-generator-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-generator
  labels:
    app: log-generator
spec:
  replicas: 3
  selector:
    matchLabels:
      app: log-generator
  template:
    metadata:
      labels:
        app: log-generator
    spec:
      containers:
        - name: log-generator
          image: log-generator:latest
          imagePullPolicy: Never # Kind에서 로컬 이미지 사용
          ports:
            - containerPort: 3000
          # envFrom:
          #   - configMapRef:
          #       name: log-generator-config

---
apiVersion: v1
kind: Service
metadata:
  name: log-generator-service
spec:
  selector:
    app: log-generator
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
