k8s_userside_log_generator/k8s_http_to_flu_to_server/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: board-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: log-generator-service
                port:
                  number: 80
